--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my website</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="container">
+    <header>Header Section</header>
     <h1>Front End Bootcamp</h1>
+    <p>This is second day of react bootcamp.</p>
+    <main>Main Section</main>
+
+    <footer>Footer Section</footer>
   </body>
 </html>
 
 <!-- 
 git init   initialize the git
 git add .  add changed file to staging
-git commit -m " " to make a commit 
-
-
-
-
-
-
-
-    
+git commit -m " " to make a commit    
 -->
