--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <header>Header Section</header>
     <h1>Front End Bootcamp</h1>
     <p>This is second day of react bootcamp.</p>
-    <main>Main Section</main>
+    <main>
+      <div class="first">First div</div>
+      <div class="second">Second div</div>
+    </main>
 
     <footer>Footer Section</footer>
   </body>
